test/fail/actor-reference-lower.mo
// actor references

let _ = actor "ic:c0fefed00d41";  // lowercase
